api/.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: default
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: cr.yandex/crphumdkkpdrgg386glu/api:latest
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
        ports:
        - containerPort: 80
