api/.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-certificate
spec:
  ingressClassName: traefik
  tls:
    - secretName: api.zakupai.letsencrypt.key.tls
      hosts:
        - api.xn----7sbbznd9a5a.xn--p1ai
  rules:
  - host: api.xn----7sbbznd9a5a.xn--p1ai
    http:
      paths:
        - backend:
            service:
              name: api
              port:
                number: 80
          pathType: ImplementationSpecific
